--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
-# Core GUI (tkinter is bundled with Python, no need to install separately)
-# tk==0.1.0  # Removed since it's not needed via pip
-
-# Image processing for recycle bin icon
-Pillow>=10.0.0,<11.0.0  # Flexible range, avoids problematic 10.3.0 build
-
-# Plotting and visualization
-matplotlib>=3.8.0,<4.0.0
-
-# Numerical computations
-numpy>=1.26.0,<2.0.0
-
-# Machine learning for clustering
-scikit-learn>=1.4.0,<2.0.0
+PyPDF2>=3.0.1
+pytesseract>=0.3.10
+Pillow>=10.3.0
+nltk>=3.8.1
+matplotlib>=3.8.4
+ttkbootstrap>=1.10.1
+wordcloud>=1.9.3
