--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 PyPDF2>=3.0.1
 pytesseract>=0.3.10
-Pillow>=10.3.0
+Pillow>=10.0.0,<11.0.0
 nltk>=3.8.1
 matplotlib>=3.8.4
 ttkbootstrap>=1.10.1
 wordcloud>=1.9.3
+pdf2image>=1.17.0  # Added for scanned PDFs
